--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -151,3 +151,7 @@ apt_aptitude_solution_cost: []
 #     pin: "version 5.20*"
 #     priority: 1001
 apt_preferences: []
+
+# Provide dpkg command-line options. E.g. to force conffile handling in dpkg
+# like adding '--force-confold' to keep the old configuration files.
+apt_dpkg_options: []
